chore: remove archive from tracking and resolve Modernizer violations
Stop tracking src-for-medPortal.rar (source already under src/), expand
.gitignore for Angular/build caches, document change-scope audit, and
replace Optional.get/Collections/Paths patterns so modernizer passes
without -Dmodernizer.skip.